--- a/ableton/index.html
+++ b/ableton/index.html
@@ -1,12 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Learn more about Ableton</title>
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="left">
+          <a href="#" class="logo">Ableton</a>
+          <a href="#">Live</a>
+          <a href="#">Push</a>
+          <a href="#">Link</a>
+          <a href="#">Shop</a>
+          <a href="#">Packs</a>
+          <a href="#">Help</a>
+        </div>
+        <div class="right">
+          <a href="#">Try Live for free</a>
+          <a href="#">Sign up</a>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <img src="./images/1.jpg" alt="" class="ableton-img" />
+      <div class="intro-text">
+        <h2>
+          We make <a href="#">Live</a> , <a href="#">Push</a> and
+          <a href="#">Link</a> — unique software and hardware for music creation
+          and performance. With these products, our community of users creates
+          amazing things.
+        </h2>
+
+        <h4>
+          Ableton was founded in 1999 and released the first version of Live in
+          2001. Our products are used by a community of dedicated musicians,
+          sound designers, and artists from across the world.
+        </h4>
+      </div>
+      <div class="about-images">
+        <div class="yellow-right"></div>
+        <div class="images">
+          <img src="./images/2.jpg" alt="" />
+          <img src="./images/3.jpg" alt="" />
+        </div>
+      </div>
+      <div class="intro-text">
+        <h2>
+          Making music isn’t easy. It takes time, effort, and learning. But when
+          you’re in the flow, it’s incredibly rewarding.
+        </h2>
+
+        <h4>
+          We feel the same way about making Ableton products. The driving force
+          behind Ableton is our passion for what we make, and the people we make
+          it for.
+        </h4>
+      </div>
+
+      <img src="./images/4.jpg" alt="" />
+
+      <div class="intro-text">
+        <h2>
+          We are more than 350 people from 30 different countries divided
+          between our headquarters in Berlin and our offices in Los Angeles and
+          Tokyo.
+        </h2>
+
+        <h4>
+          Most of us are active musicians, producers, and DJs, and many of us
+          use Live and Push every day. We come from a wide range of cultural and
+          professional backgrounds. Some of us have PhDs, some are self-taught,
+          and most of us are somewhere in between. What connects us is the
+          shared belief that each of us has the skills and knowledge to
+          contribute to something big: helping to shape the future of music
+          culture.
+        </h4>
+      </div>
+
+      <div class="about-images">
+        <div class="green-right"></div>
+        <div class="images">
+          <img src="./images/5.jpg" alt="" />
+          <img src="./images/6.jpg" alt="" />
+          <img src="./images/7.jpg" alt="" />
+        </div>
+      </div>
+
+      <div class="intro-text">
+        <h2>
+          We believe it takes focus to create truly outstanding instruments. We
+          only work on a few products and we strive to make them great.
+        </h2>
+
+        <h4>
+          Rather than having a one-size-fits-all process, we try to give our
+          people what they need to work their magic and grow. We’ve learned that
+          achieving the best results comes from building teams that are richly
+          diverse, and thus able to explore problems from a wider set of
+          perspectives. We don’t always agree with each other, but opinion and
+          debate are valued and openly encouraged.
+        </h4>
+      </div>
+
+      <img src="./images/8.jpg" alt="" />
+      <div class="outro-box">
+        <h2>
+          We believe it takes focus to create truly outstanding instruments. We
+          only work on a few products and we strive to make them great.
+        </h2>
+      </div>
+    </main>
+    <footer>
+      <div class="logo"><h1>Ableton</h1></div>
+      <div class="menu">
+        <div class="menu1">
+            <a href="#">Register Live or Push ></a>
+            <a href="#">About Ableton ></a>
+            <a href="#">Jobs ></a>
+        </div>
+        <div class="menu2">
+            <p>Education</p>
+            <a href="#">Offers for student and teachers ></a>
+            <a href="#">Ableton for the Classroom ></a>
+            <a href="#">Ableton for Colleges and Universities ></a>
+        </div>
+        <div class="menu3">
+            <h3>Sign up to our newsletter</h3>
+            <p>Enter your email address to stay up to date with the latest offers, tutorials, downloads, surveys and more.</p>
+            <form>
+                <input type="email" name="email" placeholder="Your Email Address">
+                <button class="btn-submit">Sign Up</button>
+            </form>
+        </div>
+      </div>
+      <p class="creator">Created with ❤️ By&nbsp;<a href="https://github.com/rezasmind" target="_blank">Reza Aghajani</a></p>
+    </footer>
+  </body>
 </html>
