--- a/ableton/index.html
+++ b/ableton/index.html
@@ -12,16 +12,22 @@
       <nav>
         <div class="left">
           <a href="#" class="logo">Ableton</a>
+          <div class="navbar">
           <a href="#">Live</a>
           <a href="#">Push</a>
           <a href="#">Link</a>
           <a href="#">Shop</a>
           <a href="#">Packs</a>
           <a href="#">Help</a>
+          </div>
+
         </div>
         <div class="right">
+          <div class="navbar">
           <a href="#">Try Live for free</a>
           <a href="#">Sign up</a>
+          </div>
+
         </div>
       </nav>
     </header>
